name:                pmgame
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/MWRuszczycky/pmgame#readme
license:             BSD3
license-file:        LICENSE
author:              Mark W. Ruszczycky
maintainer:          mwruszczycky@gmail.com
copyright:           2018 Mark W. Ruszczycky
category:            Game
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable pmgame
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -O2 -threaded
  build-depends:       base >= 4.7 && < 5
                     , brick
                     , directory
                     , matrix
                     , microlens
                     , microlens-th
                     , random
                     , vector
                     , vty
                     , text
                     , unix
 other-modules:        Controller
                     , Loading
                     , Model.Model
                     , Model.Types
                     , Model.Utilities
                     , Paths_pmgame
                     , Resources
                     , View.Core
                     , View.DialogUIs
                     , View.MazeUIs
                     , View.Tiles
                     , View.View

